--- a/wordle_test.html
+++ b/wordle_test.html
@@ -24,7 +24,7 @@
             ,  b2MouseJointDef =  Box2D.Dynamics.Joints.b2MouseJointDef
         ;
 
-        var worldScale = 30; // box2d中以米为单位，1米=30像素
+        var worldScale = 30; 
         var gravity = new b2Vec2(0, 0);
         var sleep = true;
         var world;
